--- a/#src/services-detail.html
+++ b/#src/services-detail.html
@@ -50,24 +50,24 @@
                             <div class="box">
                                 <ul class="links-group">
                                     <li>
-                                        <a href="#">Показания к проведению процедуры</a>
+                                        <a href="#anchor1">Показания к проведению процедуры</a>
                                     </li>
                                     <li>
-                                        <a href="#">Протезирование зубов: виды и стоимость</a>
+                                        <a href="#anchor2">Протезирование зубов: виды и стоимость</a>
                                     </li>
                                     <li>
-                                        <a href="#">Услуги протезирования зубов: этапы и стоимость в клинике Dana</a>
+                                        <a href="#anchor3">Услуги протезирования зубов: этапы и стоимость в клинике Dana</a>
                                     </li>
                                     <li>
-                                        <a href="#">Цены </a>
+                                        <a href="#anchor4">Цены </a>
                                     </li>
                                     <li>
-                                        <a href="#">Фотогалерея</a>
+                                        <a href="#anchor5">Фотогалерея</a>
                                     </li>
                                 </ul>
                             </div>
                         </div>
-                        <div class="main-grid__content-row">
+                        <div id="anchor1" class="main-grid__content-row">
                             <div class="box box--has-text">
                                 <div class="text-content last">
                                     <h3>Показания к проведению процедуры</h3>
@@ -95,17 +95,198 @@
                         <div class="main-grid__content-row">
                             @@include('common/info-cards-list/_info-cards-list.html')
                         </div>
+                        <div class="main-grid__content-row">
+                            @@include('common/board/_board.html')
+                        </div>
+                        <div id="anchor2" class="main-grid__content-row">
+                            <div class="box box--has-text">
+                                <div class="text-content last">
+                                    <h3>Протезирование зубов: виды и стоимость</h3>
+                                    <figure>
+                                        <img src="img/photo/text-img-1.jpg" alt="">
+                                    </figure>
+                                    <p>
+                                        Средняя стоимость протезирования зубов в СПб зависит от выбранного типа ортопедических конструкций. Условно они делятся на съемные и несъемные. Для изготовления протезов используются различные материалы: металлокерамика, керамика, диоксид циркония и оксид алюминия. Этот параметр также влияет на формирование цены на протезирование зубов в клиниках.
+                                    </p>
+                                    <p>
+                                        Наиболее прочными и эстетически привлекательными считаются ортопедические приспособления из последних двух материалов, что сказывается на итоговой стоимости процедуры. Бюджетный вариант – металлокерамика, универсальными и выгодными с финансовой точки зрения признаны керамические конструкции.
+                                    </p>
+
+                                    <h5>При выполнении данного вида лечения используются:</h5>
+
+                                    <ul class="with-margin">
+                                        <li><strong>Коронки</strong> – своеобразные колпачки, замещающие утраченную часть твердых тканей;</li>
+                                        <li><strong>Мосты</strong> – соединенные между собой 2 и более коронок, которые устанавливаются на импланты (металлические штифты) или соседние предварительно обточенные резцы (альтернатива – использование адгезивного стоматологического клея);</li>
+                                        <li><strong>Виниры</strong> и люминиры – тонкие пластинки для коррекции эстетических и мелких функциональных дефектов, устанавливаются на внешней стороне коронковой части;</li>
+                                        <li><strong>Вкладки</strong> – пластины для восстановления внутренней целостности костных структур, применяются вместо пломб.</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="anchor3" class="main-grid__content-row">
+                            <div class="services-steps">
+                                <h3 class="services-steps__title">Услуги протезирования зубов: этапы и стоимость в клинике Dana</h3>
+                                <div class="services-steps__subtitle">Лечение описанным методом выполняется последовательно:</div>
+                                <ul class="services-steps__list">
+                                    <li>
+                                        <a href="#" class="info-card info-card--second not-hover">
+                                            <div class="info-card__icon">
+                                                1
+                                            </div>
+                                            <div class="info-card__inner">
+                                                <div class="info-card__title">
+                                                    Проводится консультация и первичная диагностика
+                                                </div>
+                                                <div class="info-card__text">
+                                                    После осмотра назначаются рентгенологические исследования
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="info-card info-card--second not-hover">
+                                            <div class="info-card__icon">
+                                                2
+                                            </div>
+                                            <div class="info-card__inner">
+                                                <div class="info-card__title">
+                                                    Ставится диагноз и подбирается оптимальный способ лечения
+                                                </div>
+                                                <div class="info-card__text">
+                                                    Врач согласовывает с пациентом комплекс процедур, сроки и цену
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="info-card info-card--second not-hover">
+                                            <div class="info-card__icon">
+                                                3
+                                            </div>
+                                            <div class="info-card__inner">
+                                                <div class="info-card__title">
+                                                    Выполняется подготовка
+                                                </div>
+                                                <div class="info-card__text">
+                                                    Профессиональная гигиена ротовой полости, устранение кариозных очагов и поражений, удаление корневых, утративших функциональность
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="info-card info-card--second not-hover">
+                                            <div class="info-card__icon">
+                                                4
+                                            </div>
+                                            <div class="info-card__inner">
+                                                <div class="info-card__title">
+                                                    Изготовление протезов
+                                                </div>
+                                                <div class="info-card__text">
+                                                    На данном этапе зубной техник снимает слепки челюстей и разрабатывает в лаборатории индивидуальные ортопедические приспособления
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="info-card info-card--second not-hover">
+                                            <div class="info-card__icon">
+                                                5
+                                            </div>
+                                            <div class="info-card__inner">
+                                                <div class="info-card__title">
+                                                    Установка
+                                                </div>
+                                                <div class="info-card__text">
+                                                    При имплантации штифтов процедура занимает в общей сложности около 3 – 6 месяцев. Если используется съемный метод, длительность измеряется в часах
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </li>
+                                </ul>
+                                <div class="services-steps__text">
+                                    Воспользуйтесь услугами нашей клиники протезирования зубов в СПб – и вы сделаете уверенный шаг навстречу безболезненным приемам пищи и восстановлению здоровой улыбки!
+                                </div>
+                            </div>
+                        </div>
+                        <div id="anchor4" class="main-grid__content-row">
+                            <div class="price-section">
+                                <h2 class="price-section__title mb-3">Цены</h2>
+                                <ul class="price-section__list">
+                                    <li>
+                                        <div class="price-section__list-item">
+                                            <p><a href="#">Культевая вкладка простая Co-Cr</a></p>
+                                            <p><strong>от 6800 ₽</strong></p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="price-section__list-item">
+                                            <p><a href="#">Культевая вкладка разборная циркониевая (разборная)</a></p>
+                                            <p><strong>от 21000 ₽</strong></p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="price-section__list-item">
+                                            <p><a href="#">Керамическая вкладка Overlay</a></p>
+                                            <p><strong>от 21000 ₽</strong></p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="price-section__list-item">
+                                            <p>Керамическая вкладка Overlay</p>
+                                            <p><strong>от 21000 ₽</strong></p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="price-section__list-item">
+                                            <p>Цельнолитая коронка Co-Cr</p>
+                                            <p><strong>от 10000 ₽</strong></p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="price-section__list-item">
+                                            <p>Металлокерамическая коронка Co-Cr</p>
+                                            <p><strong>15000 ₽</strong></p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="price-section__list-item">
+                                            <p>Керамическая коронка E-max</p>
+                                            <p><strong>от 21000 ₽</strong></p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="price-section__list-item">
+                                            <p>Винир E-max</p>
+                                            <p><strong>от 27000 ₽</strong></p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div id="anchor5" class="main-grid__content-row">
+                            @@include('common/gallery/_gallery.html')
+                        </div>
                     </div>
                     <div class="main-grid__side-column">
                         <div class="main-grid__sticky-box">
-                            sticky-box
+                            @@include('common/services-side-panel/_services-side-panel.html')
+                            @@include('common/cta-card/_cta-card.html', {
+                                "title": "Запишитесь к врачу"
+                            })
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
+        @@include('common/team-carousel/_team-carousel.html', {
+            "subtitle": false
+        })
 
+        @@include('common/cta/_cta.html', {
+            "img": "img/photo/cta-img-3.png"
+        })
     </main>
 
 
