--- a/#src/common/quiz/_quiz.html
+++ b/#src/common/quiz/_quiz.html
@@ -70,6 +70,7 @@
                                     <strong>15000 ₽</strong>
                                 </li>
                             </ul>
+                            <a href="#" class="quiz-content-card__link">Посмотреть прайс</a>
                         </div>
                     </div>
                     <div class="quiz__content-col">
@@ -109,11 +110,12 @@
                                     </div>
                                 </li>
                             </ul>
+                            <a href="#" class="quiz-content-card__link">Посмотреть все статьи</a>
                         </div>
                     </div>
                     <div class="quiz__content-col">
                         <div class="quiz-content-card">
-                            <h3 class="quiz-content-card__title">Сяжитесь с нами</h3>
+                            <h3 class="quiz-content-card__title">Свяжитесь с нами</h3>
                             <div class="quiz-content-card__text">
                                 Запишитесь прямо сейчас и мы подберем удобную клинику и подходящего врача. Оставьте
                                 заявку и мы в ближайшее время свяжемся с вами.
@@ -166,6 +168,7 @@
                                     <strong>15000 ₽</strong>
                                 </li>
                             </ul>
+                            <a href="#" class="quiz-content-card__link">Посмотреть прайс</a>
                         </div>
                     </div>
                     <div class="quiz__content-col">
@@ -205,11 +208,12 @@
                                     </div>
                                 </li>
                             </ul>
+                            <a href="#" class="quiz-content-card__link">Посмотреть все статьи</a>
                         </div>
                     </div>
                     <div class="quiz__content-col">
                         <div class="quiz-content-card">
-                            <h3 class="quiz-content-card__title">Сяжитесь с нами</h3>
+                            <h3 class="quiz-content-card__title">Свяжитесь с нами</h3>
                             <div class="quiz-content-card__text">
                                 Запишитесь прямо сейчас и мы подберем удобную клинику и подходящего врача. Оставьте
                                 заявку и мы в ближайшее время свяжемся с вами.
@@ -262,6 +266,7 @@
                                     <strong>15000 ₽</strong>
                                 </li>
                             </ul>
+                            <a href="#" class="quiz-content-card__link">Посмотреть прайс</a>
                         </div>
                     </div>
                     <div class="quiz__content-col">
@@ -301,11 +306,12 @@
                                     </div>
                                 </li>
                             </ul>
+                            <a href="#" class="quiz-content-card__link">Посмотреть все статьи</a>
                         </div>
                     </div>
                     <div class="quiz__content-col">
                         <div class="quiz-content-card">
-                            <h3 class="quiz-content-card__title">Сяжитесь с нами</h3>
+                            <h3 class="quiz-content-card__title">Свяжитесь с нами</h3>
                             <div class="quiz-content-card__text">
                                 Запишитесь прямо сейчас и мы подберем удобную клинику и подходящего врача. Оставьте
                                 заявку и мы в ближайшее время свяжемся с вами.
