--- a/#src/common/pagination/_pagination.html
+++ b/#src/common/pagination/_pagination.html
@@ -1,23 +1,26 @@
 
 <div class="pagination">
 	<a href="" class="pagination__arrow">
-		<img class="img-svg" src="img/icons/arrow-left.svg" alt="">
+		<svg><use xlink:href="img/icons/sprites.svg#chevron-left"></use></svg>
 	</a>
 	<ul class="pagination__list">
 		<li>
-			<a href="#" class="pagination__item">1</a>
+			<a href="#" class="pagination__item active">1</a>
 		</li>
 		<li>
 			<a href="#" class="pagination__item">2</a>
+		</li>
+		<li>
+			<a href="#" class="pagination__item">3</a>
 		</li>
 		<li class="dots">
 			...
 		</li>
 		<li>
-			<a href="#" class="pagination__item">5</a>
+			<a href="#" class="pagination__item">6</a>
 		</li>
 	</ul>
 	<a href="" class="pagination__arrow">
-		<img class="img-svg" src="img/icons/arrow-right.svg" alt="">
+		<svg><use xlink:href="img/icons/sprites.svg#chevron-right"></use></svg>
 	</a>
 </div>
