--- a/#src/services-detail.html
+++ b/#src/services-detail.html
@@ -129,7 +129,7 @@
                                 <div class="services-steps__subtitle">Лечение описанным методом выполняется последовательно:</div>
                                 <ul class="services-steps__list">
                                     <li>
-                                        <a href="#" class="info-card info-card--second not-hover">
+                                        <div class="info-card info-card--second">
                                             <div class="info-card__icon">
                                                 1
                                             </div>
@@ -141,10 +141,10 @@
                                                     После осмотра назначаются рентгенологические исследования
                                                 </div>
                                             </div>
-                                        </a>
+                                        </div>
                                     </li>
                                     <li>
-                                        <a href="#" class="info-card info-card--second not-hover">
+                                        <div class="info-card info-card--second">
                                             <div class="info-card__icon">
                                                 2
                                             </div>
@@ -156,10 +156,10 @@
                                                     Врач согласовывает с пациентом комплекс процедур, сроки и цену
                                                 </div>
                                             </div>
-                                        </a>
+                                        </div>
                                     </li>
                                     <li>
-                                        <a href="#" class="info-card info-card--second not-hover">
+                                        <div class="info-card info-card--second">
                                             <div class="info-card__icon">
                                                 3
                                             </div>
@@ -171,10 +171,10 @@
                                                     Профессиональная гигиена ротовой полости, устранение кариозных очагов и поражений, удаление корневых, утративших функциональность
                                                 </div>
                                             </div>
-                                        </a>
+                                        </div>
                                     </li>
                                     <li>
-                                        <a href="#" class="info-card info-card--second not-hover">
+                                        <div class="info-card info-card--second">
                                             <div class="info-card__icon">
                                                 4
                                             </div>
@@ -186,10 +186,10 @@
                                                     На данном этапе зубной техник снимает слепки челюстей и разрабатывает в лаборатории индивидуальные ортопедические приспособления
                                                 </div>
                                             </div>
-                                        </a>
+                                        </div>
                                     </li>
                                     <li>
-                                        <a href="#" class="info-card info-card--second not-hover">
+                                        <div class="info-card info-card--second">
                                             <div class="info-card__icon">
                                                 5
                                             </div>
@@ -201,7 +201,7 @@
                                                     При имплантации штифтов процедура занимает в общей сложности около 3 – 6 месяцев. Если используется съемный метод, длительность измеряется в часах
                                                 </div>
                                             </div>
-                                        </a>
+                                        </div>
                                     </li>
                                 </ul>
                                 <div class="services-steps__text">
